packages/server_fn/tests/invalid/no_return.stderr
error: expected `->`
 --> tests/invalid/no_return.rs:4:26
  |
4 | pub async fn no_return() {}
  |                          ^
